--- a/package.json
+++ b/package.json
@@ -81,5 +81,8 @@
     ],
     "coverageDirectory": "../coverage",
     "testEnvironment": "node"
-  }
+  },
+  "optionalDependencies": {
+  "fsevents": "^2.3.2"
+}
 }
